# WontTrade

./: .gitignore  AGENTS.md  README.md  SPEC.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.zed/: settings.json
examples/: backtest-example.toml
wonttrade/: __init__.py  config.py  context.py  hyperliquid_client.py  loop.py  models.py
wonttrade/backtest/: __init__.py  dataset.py  historical.py  replay.py  simulation.py
wonttrade/core/: execution.py  guardrails.py  indicator_engine.py  reconciler.py  state_loader.py
wonttrade/llm/: decision_engine.py
wonttrade/telemetry/: audit.py  logger.py
